--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 
-libVersion=e11d0c70d4
+
 
 extType=music
-extId=youtube-music
+extId=youtube_music
 extClass=YoutubeExtension
 
 extIconUrl=https://music.youtube.com/img/favicon_144.png
