--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,66 +1,91 @@
-name: Build Echo YouTube Extension APK
+name: nightly
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      NAME: Youtube Extension
+      TAG: yt
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: 17
+          cache: 'gradle'
 
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
+      - name: Cook Env
+        run: |
+          echo -e "## ${{ env.NAME }}\n${{ github.event.head_commit.message }}" > commit.txt
+          version=$( echo ${{ github.event.head_commit.id }} | cut -c1-7 )
+          echo "VERSION=v$version" >> $GITHUB_ENV
+          echo "APP_PATH=app/build/${{ env.TAG }}-$version.eapk" >> $GITHUB_ENV
+          echo "${{ secrets.KEYSTORE_B64 }}" | base64 -d > $GITHUB_WORKSPACE/signing-key.jks
+          chmod +x ./gradlew
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      - name: Build with Gradle
+        run: |
+          ./gradlew assembleRelease \
+          -Pandroid.injected.signing.store.file=$GITHUB_WORKSPACE/signing-key.jks \
+          -Pandroid.injected.signing.store.password=${{ secrets.PASSWORD }} \
+          -Pandroid.injected.signing.key.alias=ecoyoutube \
+          -Pandroid.injected.signing.key.password=${{ secrets.PASSWORD }}
+          
+          cp app/build/outputs/apk/release/app-release.apk ${{ env.APP_PATH }}
 
-    - name: Decode Keystore
-      env:
-        KEYSTORE_B64: ${{ secrets.KEYSTORE_B64 }}
-        PASSWORD: ${{ secrets.PASSWORD }}
-      run: |
-        echo "$KEYSTORE_B64" | base64 -d > ecoyoutubemusics.keystore
-        echo "Keystore decoded successfully"
-        ls -la ecoyoutubemusics.keystore
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          path: ${{ env.APP_PATH }}
 
-    - name: Build Debug APK
-      env:
-        PASSWORD: ${{ secrets.PASSWORD }}
-      run: |
-        ./gradlew assembleDebug
-        echo "Debug APK built successfully"
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          make_latest: true
+          tag_name: ${{ env.VERSION }}
+          body_path: commit.txt
+          name: ${{ env.VERSION }}
+          files: ${{ env.APP_PATH }}
 
-    - name: Build Release APK
-      env:
-        PASSWORD: ${{ secrets.PASSWORD }}
-      run: |
-        ./gradlew assembleRelease
-        echo "Release APK built successfully"
+      - name: Delete Old Releases
+        uses: sgpublic/delete-release-action@master
+        with:
+          release-drop: true
+          release-keep-count: 1
+          release-drop-tag: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload APKs
-      uses: actions/upload-artifact@v4
-      with:
-        name: apk-files
-        path: |
-          app/build/outputs/apk/debug/*.apk
-          app/build/outputs/apk/release/*.apk
-        retention-days: 30
+      - name: Upload APK to Discord
+        shell: bash
+        env:
+          WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        run: |
+          commit=$(jq -Rsa . <<< "${{ github.event.head_commit.message }}"  | tail -c +2 | head -c -2)
+          message=$(echo "@everyone **${{ env.VERSION }}**\n$commit")
+          curl -F "payload_json={\"content\":\"${message}\"}" \
+          -F "file=@${{ env.APP_PATH }}" \
+          ${{ env.WEBHOOK }}
 
-    - name: List build outputs
-      run: |
-        echo "=== APK Build Outputs ==="
-        find app/build/outputs/apk -name "*.apk" -type f
-        echo "=== Build Directory Structure ==="
-        ls -la app/build/outputs/
+      - name: Upload APK to Telegram
+        shell: bash
+        env:
+          BOT_ID: ${{ secrets.TELEGRAM_BOT_ID }}
+          CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+          THREAD_ID: ${{ secrets.TELEGRAM_THREAD_ID }}
+        run: |
+          message=$(echo -e "${{ env.NAME }}\n$(echo -e "${{ github.event.head_commit.message }}" | sed 's/[~>|.!+-=#]/\\&/g')")
+          curl -F "chat_id=${{ env.CHANNEL_ID }}" \
+          -F "message_thread_id=${{ env.THREAD_ID }}" \
+          -F "document=@${{ env.APP_PATH }}" \
+          -F "caption=${message}" \
+          -F "parse_mode=MarkdownV2" \
+          https://api.telegram.org/bot${{ env.BOT_ID }}/sendDocument
